@@ -30,10 +30,14 @@ class MultiModeMixin(BrowserView):
     #                      'submit_label': 'Delete file'}}
     # Possible values for extra values are:
     # - success_msg: the message to display in portal message when the form has been
-    #   successfully processed.
+    #   successfully processed
     # - error_msg: message dislayed in the portal message when errors have been
-    #   found when checking the form.
-    # - submit values: value for the submit button generated by 'make_form_extras'
+    #   found when checking the form
+    # - cancel_msg: message displayed when the user cancels
+    # - submit_label: value for the submit button generated by 'make_form_extras'
+    # - cancel_label: label for the cancel button
+    # - success_mode: the mode used when the form is successfully processed
+    # - cancel_mode: the mode to switch when the user cancels.
     modes = {}
 
     # The mode the view should switch to by default
@@ -170,6 +174,7 @@ class MultiModeMixin(BrowserView):
         options['mode'] = self.mode
         if isinstance(self.modes, dict):
             options['submit_label'] = self.modes[self.mode].get('submit_label')
+            options['cancel_label'] = self.modes[self.mode].get('cancel_label', None)
 
         return self.fake_template(**options)
 
@@ -340,6 +345,11 @@ class MultiModeMixin(BrowserView):
             if msg is not None:
                 self.success_msg = msg
 
+            # We only check what has been defined in the modes dictionnary
+            # if nothing is defined in the _process_mode_form itself.
+            if view is None:
+                view = self.modes[self.mode].get('success_mode', view)
+
         return view
 
     def on_call(self):
@@ -356,8 +366,22 @@ class MultiModeMixin(BrowserView):
         form = self.request.form
         if 'form_cancelled' in form:
             # User cancelled.
-            self.mode = self.cancel_mode or self.default_mode
-            self.addPortalMessage(self.cancel_msg)
+            if isinstance(self.modes, dict):
+                cancel_mode = self.modes.get(self.mode, {}).get('cancel_mode', None)
+                if not cancel_mode in self.modes:
+                    msg = "Tried to switch to mode '%s' after cancelling, " + \
+                          "but this mode does not exist"
+                    logger.info(msg % cancel_mode)
+                    cancel_mode = None
+
+                cancel_msg = self.modes.get(self.mode, {}).get('cancel_msg', None)
+            else:
+                cancel_mode = None
+                cancel_msg = None
+
+            self.mode = cancel_mode or self.cancel_mode or self.default_mode
+
+            self.addPortalMessage(cancel_msg or self.cancel_msg)
             return
         
         if not 'form_submitted' in form or \
