@@ -114,3 +114,79 @@ class Sample21View(Sample2View):
              }
 
     view_name = 'multimodeview_sample21'
+
+class Sample3View(MultiModeView):
+    modes = {'step1': {'submit_label': 'Go to step 2'},
+             'step2': {'submit_label': 'Go to step 3'},
+             'step3': {'submit_label': 'Go to step 4'},
+             'step4': {'submit_label': 'Go to step 5'},
+             'step5': {}}
+
+    default_mode = 'step1'
+    view_name = 'multimodeview_sample3'
+
+    def check_form(self):
+        return True
+
+    def _process_step1_form(self):
+        return 'step2'
+
+    def _process_step2_form(self):
+        return 'step3'
+
+    def _process_step3_form(self):
+        return 'step4'
+
+    def _process_step4_form(self):
+        return 'step5'
+
+    def _process_step5_form(self):
+        return 'step5'
+
+    @property
+    def cancel_mode(self):
+        mapping = {'step1': 'step1',
+                   'step2': 'step1',
+                   'step3': 'step2',
+                   'step4': 'step3',
+                   'step5': 'step4'}
+        return mapping.get(self.mode)
+
+class Sample31View(MultiModeView):
+    modes = {'step1': {'submit_label': 'Go to step 2',
+                       'cancel_label': 'Cancel',
+                       'success_mode': 'step2',
+                       'cancel_mode': 'step1',
+                       'cancel_msg': 'You can not go back, mwahaha'},
+             'step2': {'submit_label': 'Go to step 3',
+                       'cancel_label': 'Back to step 1',
+                       'success_mode': 'step3',
+                       'cancel_mode': 'step1'},
+             'step3': {'submit_label': 'Go to step 4',
+                       'cancel_label': 'Back to step 2',
+                       'success_mode': 'step4',
+                       'cancel_mode': 'step2'},
+             'step4': {'submit_label': 'Go to step 5',
+                       'cancel_label': 'Back to step 3',
+                       'success_mode': 'step5',
+                       'cancel_mode': 'step3'},
+             'step5': {}}
+
+    default_mode = 'step1'
+    view_name = 'multimodeview_sample31'
+
+    def check_form(self):
+        return True
+
+    def _process_step1_form(self):
+        pass
+
+    def _process_step2_form(self):
+        pass
+
+    def _process_step3_form(self):
+        pass
+
+    def _process_step4_form(self):
+        pass
+
