@@ -4,6 +4,12 @@ Changelog
 1.0dev (unreleased)
 -------------------
 
+- added the possibility to define a custom label for the cancel button
+  and a custom cancel message for each mode. [vincent]
+
+- you can now defined the modes to swtich to once form is processed or
+  user cancelled in the 'modes' dictionnary. [vincent]
+
 - added samples + README. [vincent]
 
 - extracted code from Products.plonehrm. [vincent]
